--- a/src/Project.toml
+++ b/src/Project.toml
@@ -1,14 +1,19 @@
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DynamicPPL = "366bfd00-2699-11ea-058f-f148b4cae6d8"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
+IntervalRootFinding = "d2bf35a9-74e0-55ec-b149-d360ff49b807"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SliceSampling = "43f4d3e8-9711-4a8c-bd1b-03ac73a255cf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
